@@ -170,12 +170,7 @@ void _CFNetworkResetHSTSHostsWithSession(CFURLStorageSessionRef);
 #endif
 
 void CFHTTPCookieStorageDeleteAllCookies(CFHTTPCookieStorageRef);
-
-#if (PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED < 101300)
 void _CFHTTPCookieStorageFlushCookieStores();
-#else
-void CFHTTPCookieStorageFlushCookieStores();
-#endif
 
 #if PLATFORM(COCOA)
 CFDataRef _CFCachedURLResponseGetMemMappedData(CFCachedURLResponseRef);
