@@ -1,3 +1,13 @@
+2017-05-05  Brady Eidson  <beidson@apple.com>
+
+        API test WebKit2.WebsiteDataStoreCustomPaths is failing on ios-simulator.
+        <rdar://problem/31977294> and https://bugs.webkit.org/show_bug.cgi?id=171513
+
+        Reviewed by Andy Estes.
+
+        * TestWebKitAPI/Tests/WebKit2Cocoa/WebsiteDataStoreCustomPaths.mm:
+        (TEST):
+
 2017-05-05  Brian Burg  <bburg@apple.com>
 
         [Cocoa] Converting from WebCore::Cookie to NSHTTPCookie always marks cookies as session cookies
