@@ -1,3 +1,14 @@
+2017-05-05  Brady Eidson  <beidson@apple.com>
+
+        API test WebKit2.WebsiteDataStoreCustomPaths is failing on ios-simulator.
+        <rdar://problem/31977294> and https://bugs.webkit.org/show_bug.cgi?id=171513
+
+        Reviewed by Andy Estes.
+
+        Covered by API test.
+
+        * platform/spi/cf/CFNetworkSPI.h:
+
 2017-05-05  Dean Jackson  <dino@apple.com>
 
         Try to fix iOS build.
